<resources>
    <string name="app_name">Pocket Camping</string>

    <!-- Sign In Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">No account?</string>
    <string name="auth_failed">Authentication failed</string>

    <!-- Sign Out Activity -->
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="account_created">Account created</string>
    <string name="invalid_username">Required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Min password length:</string>
    <string name="invalid_confirm">Password fields must match</string>

    <!-- Home Activity -->
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="profile">Profile</string>

    <!-- Stay Activity -->
    <string name="spot">Camp site</string>
    <string name="manage">Manage participants</string>
    <string name="meals">Meals</string>

    <!-- No Stay Activity -->
    <string name="no_stay">No stay planned</string>
    <string name="plan">Start planning!</string>

    <!-- Profile Fragment -->
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="friends">Friends</string>

    <!-- Stay Edit Activity -->
    <string name="stay_creation">Stay creation</string>
    <string name="stay_edit">Stay edit</string>
    <string name="location">Location</string>
    <string name="departure_date">Departure date</string>
    <string name="arrival_date">Arrival date</string>
    <string name="departure_time">Departure time</string>
    <string name="arrival_time">Arrival time</string>
    <string name="spot_input">Camp site (Optional)</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_location">Required</string>
    <string name="invalid_date">Invalid date</string>

    <!-- Items Activity -->
    <string name="no_items">No items yet</string>
    <string name="items">Items</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_container">New container</string>
    <string name="new_item">New item</string>
    <string name="edit_container">Edit container</string>
    <string name="edit_item">Edit item</string>
    <string name="save">Save preset</string>
    <string name="load">Load preset</string>
    <string name="check_all">Check all</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="delete_all">Delete all</string>
    <string name="no_save">Nothing to save</string>
    <string name="no_load">Nothing to load</string>
    <string name="no_check">Nothing to check</string>
    <string name="no_uncheck">Nothing to uncheck</string>
    <string name="no_delete">Nothing to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_save">This will override preexisting preset. Are you sure?</string>
    <string name="confirm_load">This will replace all current items. Are you sure?</string>
    <string name="confirm_check">Are you sure?</string>
    <string name="his_preset">his preset</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="already_exists">Already exists</string>

    <!-- Alerts Fragment -->
    <string name="no_alerts">No alerts yet</string>
    <string name="created">created</string>
    <string name="joined">joined</string>
    <string name="quit">quit</string>
    <string name="added">added</string>
    <string name="deleted">deleted</string>
    <string name="renamed">renamed</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="imported">imported from his preset</string>
    <string name="checked_all">checked everything</string>
    <string name="unchecked_all">unchecked everything</string>
    <string name="deleted_all">deleted everything</string>
    <string name="to">to</string>
    <string name="in">in</string>

    <!-- Friends Fragment -->
    <string name="no_friends">No friends yet</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="invitation_failed">Invitation failed</string>
    <string name="already_friend">This user is already your friend</string>
    <string name="no_email">Email does not exist</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="new_invite">New friend request</string>

</resources>
