<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.philippegerbeau.pocketcamping.activities.StayEditActivity">

    <FrameLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/home_banner"
            android:foreground="@color/bannerFilter"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_creation"
            android:textSize="@dimen/text_header"
            android:layout_gravity="center"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_below="@id/banner"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/location_icon"
                android:tint="@color/colorTextPrimary"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/email"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/location"
                    android:textColor="@color/colorTextPrimary"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/date_icon"
                android:tint="@color/colorTextPrimary"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/email"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/arrival_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/arrival_date"
                    android:textColor="@color/colorTextPrimary"
                    android:focusable="false"
                    android:onClick="popDate"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/departure_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/departure_date"
                    android:textColor="@color/colorTextPrimary"
                    android:focusable="false"
                    android:onClick="popDate"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/time_icon"
                android:tint="@color/colorTextPrimary"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/email"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/arrival_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/arrival_time"
                    android:textColor="@color/colorTextPrimary"
                    android:focusable="false"
                    android:onClick="popTime"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/departure_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorTextPrimary"
                    android:hint="@string/departure_time"
                    android:focusable="false"
                    android:onClick="popTime"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/spot_icon"
                android:tint="@color/colorTextPrimary"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="19dp"
                android:contentDescription="@string/email"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/spot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/spot_input"
                    android:textColor="@color/colorTextPrimary"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:onClick="confirm"/>

    </LinearLayout>

</RelativeLayout>
