<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.philippegerbeau.pocketcamping.activities.SignInActivity">

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/logo"
            android:tint="@android:color/white"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_app_bar"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_account"
            android:textSize="@dimen/body_text"
            android:textAllCaps="false"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/white" />
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_below="@id/logo_layout"
        android:layout_above="@id/sign_up_layout"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/email_icon"
                    android:tint="@color/colorTextPrimary"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/email"/>

                <EditText
                    android:id="@+id/sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textSize="@dimen/body_text"
                    android:hint="@string/email"
                    android:textColor="@color/colorTextPrimary"
                    android:background="@null"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:background="@color/colorDivider"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/password_icon"
                    android:tint="@color/colorTextPrimary"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/password"/>

                <EditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorTextPrimary"
                    android:textSize="@dimen/body_text"
                    android:hint="@string/password"
                    android:background="@null"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/forgot_password"
                android:textColor="@color/colorTextPrimary"
                android:textAllCaps="false"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/sign_in"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>
