<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.philippegerbeau.pocketcamping.activities.SignInActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/logo"
            android:tint="@android:color/white"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_app_bar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_below="@id/logo_layout"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/user_icon"
                    android:tint="@color/colorTextPrimary"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="19dp"
                    android:contentDescription="@string/username"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    app:errorEnabled="true"
                    android:layout_marginBottom="2dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/username"
                        android:textColor="@color/colorTextPrimary"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/email_icon"
                    android:tint="@color/colorTextPrimary"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="19dp"
                    android:contentDescription="@string/email"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:textColor="@color/colorTextPrimary"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/password_icon"
                    android:tint="@color/colorTextPrimary"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="19dp"
                    android:contentDescription="@string/password"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textColor="@color/colorTextPrimary"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:src="@drawable/password_icon"
                    android:tint="@color/colorTextPrimary"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="19dp"
                    android:contentDescription="@string/confirm_password"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirm_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:textColor="@color/colorTextPrimary"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            </LinearLayout>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"
            android:layout_gravity="center_horizontal"
            android:onClick="signUp"/>

    </LinearLayout>

</RelativeLayout>
