<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_invite"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        android:padding="8dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/profile_layout"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="12dp"
            app:cardCornerRadius="30dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/profile_img"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryLight"
                android:src="@drawable/user_icon"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            </ImageView>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorTextSecondary"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="4dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>

        <Button
            android:id="@+id/decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/borderlessButtonStyle"
            android:text="@string/decline"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/borderlessButtonStyle"
            android:text="@string/accept"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>